apps/production/draw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: draw
  namespace: draw
spec:
  selector:
    app: draw
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
