apps/production/draw/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: draw
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: draw-http
  namespace: draw
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`draw.turtleware.au`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: draw
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: draw
  namespace: draw
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`draw.turtleware.au`)
      kind: Rule
      services:
        - name: draw
          port: 80
  tls:
    secretName: draw-tls
